# pico-test-runner

./: Makefile  README.md  pyproject.toml  setup.cfg  test.py
src/pico_test_runner/: __init__.py  constants.py  pico.py
src/pico_test_runner/tests/registers/: read_write.py
